--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>test repo</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate, temporibus, harum magnam sunt praesentium in earum dolores mollitia voluptate eos aut. Exercitationem ad adipisci esse!</p>
 </body>
 </html>
